<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.editUser.EditUserFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.matchtail.fragments.user.edit.EditUserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/edit_user_toolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/pawfect_green"
            android:minHeight="?android:attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/ThemeOverlay.Material3.ActionBar">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="MatchTail"
                android:textColor="@color/pawfect_white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_user_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ScrollViewSize">

                <LinearLayout
                    android:id="@+id/inputs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@id/progress_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.example.matchtail.views.EditTextInput
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginEnd="64dp"
                        android:ems="10"
                        android:hint="@string/name_text"
                        android:text="@={viewModel.name}"
                        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
                        app:helperText="@{ viewModel.isNameValid() ? null : @string/name_error}"
                        app:helperTextEnabled="@{!viewModel.isNameValid()}"
                        app:helperTextTextColor="@color/design_default_color_error" />

                    <com.example.matchtail.views.EditTextInput
                        android:id="@+id/old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="64dp"
                        android:ems="10"
                        android:hint="@string/old_password_text"
                        android:inputType="textPassword"
                        android:text="@={viewModel.oldPassword}"
                        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />

                    <com.example.matchtail.views.EditTextInput
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="64dp"
                        android:ems="10"
                        android:hint="@string/password_text"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}"
                        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
                        app:helperText="@{viewModel.isPasswordValid() ? null :@string/password_error}"
                        app:helperTextEnabled="@{!viewModel.isPasswordValid()}"
                        app:helperTextTextColor="@color/design_default_color_error" />

                    <com.example.matchtail.views.EditTextInput
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="64dp"
                        android:ems="10"
                        android:hint="@string/confirm_password_text"
                        android:inputType="textPassword"
                        android:text="@={viewModel.confirmPassword}"
                        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
                        app:helperText="@{viewModel.isConfirmPasswordValid() ? null :@string/confirm_password_error}"
                        app:helperTextEnabled="@{!viewModel.isConfirmPasswordValid()}"
                        app:helperTextTextColor="@color/design_default_color_error" />

                    <com.example.matchtail.views.ImagePicker
                        android:id="@+id/image_view"
                        android:layout_width="150sp"
                        android:layout_height="150sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/upload_image_text"
                        android:src="@drawable/add_picture" />

                </LinearLayout>


                <android.widget.Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/pawfect_dark_green"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:text="@string/save_changes"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/inputs"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress_bar"
                    style="@style/Widget.MaterialComponents.CircularProgressIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputs" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>